fix: change subgect text on swagger
